--- a/client/group.jade
+++ b/client/group.jade
@@ -48,29 +48,31 @@ template(name='group')
                         strong #{name}
                 .ui.hidden.divider
             .sixteen.wide.column
-                .ui.stackable.equal.width.divided.centered.grid
+                .ui.stackable.four.column.centered.grid
                     each posts
-                        .column
-                            .content.medscroll
-                                a.header(href="/group/#{current_group}/post/#{_id}") #{title}
+                        .column.medscroll
+                            .content
+                                a.header(href="/#{current_group}/#{_id}") #{title}
+                                img.ui.fluid.rounded.image(src="{{c.url image_id }}" class=currentUser.invert_class)
+
                                 if youtube_id
                                     +youtube_view key='youtube_id' label='youtube id' direct=true
-    
-                                a(href="/group/#{current_group}/post/#{_id}")
+                                if in_dev
+                                    +text_edit key='group' label='slug' direct=true
+                                a(href="/#{current_group}/#{_id}")
                                     |!{content}
                                     if raw
                                         |!{raw}
                                 each tags
                                     +flat_tag_selector
                                     // .ui.small.basic.label #{this}
-                                +text_edit key='group' label='slug' direct=true
-                            .ui.divider
+                            // .ui.divider
 
                 
                 
 template(name='tag_selector')
     // a.ui.big.image.basic.rounded.label.zoomer.pointer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
-    .ui.large.tertiary.button.zoomer.select_tag(title="#{count} results" class="#{selector_class} #{thinking_class}")
+    .ui.tertiary.button.zoomer.select_tag(title="#{count} results" class="#{selector_class} #{thinking_class}")
         if term
             if term.watson.metadata.image
                 img.ui.mini.inline.image.superzoom(src=term.watson.metadata.image )    
@@ -97,4 +99,63 @@ template(name='flat_tag_selector')
         // if in_dev
         //     small #{count}
 
-                
+template(name='post_view')
+    with doc_by_id
+        .ui.stackable.padded.grid
+            .row 
+                .four.wide.column
+                    a.ui.circular.large.icon.button(href="/#{group}")
+                        i.chevron.left.icon
+                    .ui.large.inline.header #{title}
+                    // div
+                    // .ui.inline.grey.header {{from_now start_datetime}}
+                    
+                    if can_edit
+                        a.edit_group_post(href="/#{group}/#{_id}/edit" title='edit')
+                            i.large.circular.link.pencil.icon
+                    | #{views} views
+                    +array_edit key='tags' label='tags' direct=true
+                    // +voting_full
+                    +link_view key='link' label='link' direct=true
+
+                    +array_edit key='time_tags' label='time tags' icon='clock' direct=true
+                    +array_edit key='location_tags' label='location tags' icon='marker' direct=true
+                .nine.wide.column
+                    img.ui.fluid.rounded.image(src="{{c.url image_id }}" class=currentUser.invert_class)
+                    if youtube_id
+                        +youtube_view key='youtube_id' label='youtube id' direct=true
+                    if raw 
+                        |!{raw}
+                    .say_this.say_body
+                        |!{content}
+                    div 
+                    .spacer
+                    .spacer
+                .three.wide.column
+                    +comments
+                    if watson
+                        +watson_view
+
+template(name='post_edit')
+    with doc_by_id
+        .ui.stackable.padded.grid
+            .row
+                .four.wide.column
+                    a.ui.icon.green.big.circular.button(href="/#{group}/#{_id}" title='save')
+                        i.checkmark.big.icon
+                    .ui.inline.header 
+                        i.pencil.icon
+                        |edit group post
+                    i.large.link.circular.red.remove.icon.delete_group_post
+                    +image_edit key='image_id' label='image' direct=true
+                    div 
+                    +array_edit key='tags' label='tags' direct=true
+                    +link_edit key='link' label='link' direct=true
+                    +array_edit key='time_tags' label='time tags' icon='clock' direct=true
+                    +array_edit key='location_tags' label='location tags' icon='marker' direct=true
+                    +raw_edit key='raw' label='raw' direct=true
+                .twelve.wide.column
+                    +text_edit key='title' label='title' direct=true
+                    +html_edit key='content' label='content' direct=true
+                    +youtube_edit key='youtube_id' label='youtube id' direct=true
+        
