no circular buttons, no tertiary class on tags, grey icons, centered tags

--- a/client/fields.jade
+++ b/client/fields.jade
@@ -271,7 +271,7 @@ template(name='image_link_edit')
         img.ui.fluid.image(src=field_value)
     // +call_visual
 template(name='image_link_view')
-    img.ui.image(src=field_value)
+    img.ui.rounded.image(src=field_value)
 
 
 
