--- a/client/group.jade
+++ b/client/group.jade
@@ -1,7 +1,7 @@
 template(name='group')
-    .ui.stackable.padded.grid
+    .ui.stackable.grid
         .row 
-            .sixteen.wide.column
+            .sixteen.wide.center.aligned.column
                 .ui.inline.header    
                     |#{current_group}
                 // a.ui.header(href=link title='link')
@@ -16,7 +16,7 @@ template(name='group')
                 // +image_link_view key='image' label='image' direct=true
                 .ui.inline.header
                     |#{counter} posts
-                .ui.circular.basic.icon.button.add_post
+                .ui.basic.icon.button.add_post
                     i.plus.icon
                 if selected_tags
                     // if many_tags
@@ -30,7 +30,7 @@ template(name='group')
                 each result_tags
                     // .ui.label #{this}
                     +tag_selector
-                i.big.clock.icon
+                i.big.clock.grey.icon(title='when tags')
                 if selected_time_tags
                     each selected_time_tags
                         a.unselect_time_tag.ui.active.large.compact.button(href='#')
@@ -38,7 +38,7 @@ template(name='group')
                 each time_tags
                     .ui.basic.compact.small.button.zoomer.select_time_tag(title="#{count} results" class="#{selector_class} #{thinking_class}")
                         strong #{name}
-                i.big.marker.icon
+                i.big.marker.grey.icon(title='where tags')
                 if selected_location_tags
                     each selected_location_tags
                         a.unselect_location_tag.ui.active.large.compact.button(href='#')
@@ -76,7 +76,7 @@ template(name='group')
                 
 template(name='tag_selector')
     // a.ui.big.image.basic.rounded.label.zoomer.pointer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
-    .ui.tertiary.button.zoomer.select_tag(title="#{count} results" class="#{selector_class} #{thinking_class}")
+    .ui.compact.basic.button.zoomer.select_tag(title="#{count} results" class="#{selector_class} #{thinking_class}")
         if term
             if term.watson.metadata.image
                 img.ui.mini.inline.image.superzoom(src=term.watson.metadata.image )    
@@ -108,8 +108,8 @@ template(name='post_view')
         .ui.stackable.grid
             .row 
                 .four.wide.column
-                    .ui.basic.segment
-                        a.ui.circular.large.icon.button(href="/#{group}")
+                    .ui.basic.segmen
+                        a.ui.large.icon.button(href="/#{group}")
                             i.chevron.left.icon
                         .ui.large.inline.header #{title}
                         // div
@@ -117,7 +117,7 @@ template(name='post_view')
                         
                         if can_edit
                             a.edit_group_post(href="/#{group}/p/#{_id}/edit" title='edit')
-                                i.large.circular.link.pencil.icon
+                                i.large.link.pencil.icon
                         | #{views} views
                         +array_edit key='tags' label='tags' direct=true
                         // +voting_full
@@ -150,12 +150,12 @@ template(name='post_edit')
         .ui.stackable.padded.grid
             .row
                 .four.wide.column
-                    a.ui.icon.green.big.circular.button(href="/#{group}/p/#{_id}" title='save')
+                    a.ui.icon.green.big.button(href="/#{group}/p/#{_id}" title='save')
                         i.checkmark.big.icon
                     .ui.inline.header 
                         i.pencil.icon
                         |edit group post
-                    i.large.link.circular.red.remove.icon.delete_group_post
+                    i.large.link.red.remove.icon.delete_group_post
                     +image_edit key='image_id' label='image' direct=true
                     div 
                     +array_edit key='tags' label='tags' direct=true
