working button click into new tag seach

--- a/client/fields.jade
+++ b/client/fields.jade
@@ -516,15 +516,15 @@ template(name='array_edit')
         //- +clear_value                
     if field_value
         each field_value
-            if in_dev
-                .ui.large.circular.label
-                    i.delete.icon.remove_element
-                    |#{this}
-                // .ui.compact.circular.button.pick_tag
-                //     |#{this}
-            else
-                .ui.compact.circular.button.pick_tag
-                    |#{this}
+            // if in_dev
+            //     .ui.large.circular.label
+            //         i.delete.icon.remove_element
+            //         |#{this}
+            //     // .ui.compact.circular.button.pick_tag
+            //     //     |#{this}
+            // else
+            .ui.compact.circular.button.pick_tag
+                |#{this}
 
 // template(name='array_edit')
 //     .spacer
