18 toggle on in sub search, hide reddit button

--- a/client/sub.jade
+++ b/client/sub.jade
@@ -7,10 +7,10 @@ template(name='subreddit')
             .twelve.wide.column.seg
                 // img(src=data.banner_img)
                 // img(src=banner_background_image)
-                a.ui.compact.icon.button(href="/reddit")
-                    i.large.chevron.left.grey.icon
-                    i.large.reddit.icon
-                    // img.ui.mini.inline.image(src=icon_img)
+                // a.ui.compact.icon.button(href="/reddit")
+                //     i.large.chevron.left.grey.icon
+                //     i.large.reddit.icon
+                //     // img.ui.mini.inline.image(src=icon_img)
                 img.get_info.shadowed.ui.inline.image(src=logo_url )
                 .ui.inline.header.get_info #{data.display_name}
                 if selected_sub_tags
